--- a/index.html
+++ b/index.html
@@ -15,86 +15,88 @@
 </head>
 
 <body>
-    <header>
-        <div class="head">
-            <div class="left">TEST.1</div>
-            <div class="nav">
-                <ul>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">MEMBER</a></li>
-                    <li><a href="#">COURSE</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
+    <div class="wrap">
+        <header>
+            <div class="head">
+                <div class="left">TEST.1</div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">MEMBER</a></li>
+                        <li><a href="#">COURSE</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <!-- top-->
-    <div class="top">
-        <img src="img/top.jpg" alt="top" width="100%" height="100%">
-    </div>
-
-    <!-- main-->
-    <div class="contents-wrapper">
-        <div class="article-wrapper">
-            <div class="about-area">
-                <h1>ABOUT</h1>
-                <div class="about-flex">
-                    <div class="about-container-left">
-                        <img src="img/about1.jpg" alt="about1" class="about1">
-                        <p class="tx">テストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
-                    </div>
-                    <div class="about-container-right">
-                        <img src="img/about2.jpg" alt="about2" class="about2">
-                        <p class="tx">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
-                    </div>
-                </div>
-            </div>
-            <!-- news-area -->
-            <div class="news-area">
-                <h1 class="news">NEWS</h1>
-                <div class="calender">
-                    <p class="day">2025年3月20日</p>
-                    <p class="newstxt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
-                </div>
-                <div class="calender">
-                    <p class="day">2025年3月20日</p>
-                    <p class="newstxt">テストテストテストテストテストテストテストテストテストテストテスト</p>
-                </div>
-                <div class="calender">
-                    <p class="day">2025年3月20日</p>
-                    <p class="newstxt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
-                </div>
-            </div>
-            <a href="#" class="btn">一覧を見る</a>
+        <!-- top-- -->
+        <div class="top">
+            <img src="img/top.jpg" alt="top" class="top" width="100%">
         </div>
-        <!-- side-wrapper -->
-        <div class="side-wrapper">
-            <div class="picture-area">
-                <p>
-                <img src="img/side1.jpg" alt="サイド１" class="imgside">
+
+        <!-- main-->
+        <div class="contents-wrapper">
+            <div class="article-wrapper">
+                <div class="about-area">
+                    <h1>ABOUT</h1>
+                    <div class="about-flex">
+                        <div class="about-container-left">
+                            <img src="img/about1.jpg" alt="about1" class="about1">
+                            <p class="tx">テストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+                        </div>
+                        <div class="about-container-right">
+                            <img src="img/about2.jpg" alt="about2" class="about2">
+                            <p class="tx">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- news-area -->
+                <div class="news-area">
+                    <h1 class="news">NEWS</h1>
+                    <div class="calender">
+                        <p class="day day2">2025年3月20日</p>
+                        <p class="newstxt newstxt2">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+                    </div>
+                    <div class="calender">
+                        <p class="day">2025年3月20日</p>
+                        <p class="newstxt">テストテストテストテストテストテストテストテストテストテストテスト</p>
+                    </div>
+                    <div class="calender">
+                        <p class="day day2">2025年3月20日</p>
+                        <p class="newstxt newstxt2">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+                    </div>
+                </div>
+                <a href="#" class="btn">一覧を見る</a>
+            </div>
+            <!-- side-wrapper -->
+            <div class="side-wrapper">
+                <div class="picture-area">
+                    <p>
+                <img src="img/side1.jpg" alt="サイド１" width="100%">
                 <img src="img/side2.jpg" alt="サイド２" class="imgside">
                 <img src="img/side3.jpg" alt="サイド３" class="imgside">
                 </p>
-            </div>
-            <!-- category -->
-            <div class="category">
-                <h2>CATEGORY</h2>
-                <ul>
-                    <li>カテゴリー１</li>
-                    <li>カテゴリー２</li>
-                    <li>カテゴリー３</li>
-                </ul>
+                </div>
+                <!-- category -->
+                <div class="category">
+                    <h2>CATEGORY</h2>
+                    <ul>
+                        <li>カテゴリー１</li>
+                        <li>カテゴリー２</li>
+                        <li>カテゴリー３</li>
+                    </ul>
+                </div>
             </div>
         </div>
+
+
+        <!-- footer-->
+
+        <footer>
+            <p>Copyright ©︎ iSara All Rights Reserved.</p>
+        </footer>
     </div>
-
-
-    <!-- footer-->
-
-    <footer>
-        <p>Copyright ©︎ iSara All Rights Reserved.</p>
-    </footer>
 </body>
 
 </html>
