--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="news-area">
                     <h1 class="news">NEWS</h1>
                     <div class="calender">
-                        <p class="day day2">2025年3月20日</p>
-                        <p class="newstxt newstxt2">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+                        <p class="day day2 day3">2025年3月20日</p>
+                        <p class="newstxt newstxt2 day3">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
                     </div>
                     <div class="calender">
                         <p class="day">2025年3月20日</p>
